﻿============================== next release ==============================
  
  new data (thanks to Mariama Rebello de Sousa Dias, University of Richmond, VA, USA, for submitting numerical data!)
    other/mixed crystals/ZnO-CdO/Aguilar-10.yml
    other/mixed crystals/ZnO-CdO/Aguilar-25.yml
    other/mixed crystals/ZnO-CdO/Aguilar-40.yml
    other/mixed crystals/ZnO-CdO/Aguilar-50.yml
    other/mixed crystals/ZnO-CdO/Aguilar-63.yml
    other/mixed crystals/ZnO-CdO/Aguilar-75.yml
    other/mixed crystals/ZnO-CdO/Aguilar-90.yml
    main/ZnO/Aguilar.yml
  new data (thanks to Vladimir Zenin, University of Southern Denmark)
    main/Ag/Jiang.yml
    main/HfO2/Al-Kuhaili.yml
  new data (thanks to Penny Rowe, NorthWest Research Associates, Redmond, WA, USA, for submitting data in YAML format!)
    main/H2O/Rowe-240K.yml
    main/H2O/Rowe-253K.yml
    main/H2O/Rowe-263K.yml
    main/H2O/Rowe-273K.yml
  new data (thanks to Xiaoning Zhang, Harbin Institute of Technolog, China, for submitting data!)
    organic/(C16H14O3)n - polycarbonate/Zhang.yml
    organic/(C8H8)n - polystyren/Zhang.yml
    organic/(C10H8O4)n - polyethylene terephthalate/Zhang.yml
    organic/(C5H8O2)n - poly(methyl methacrylate)/Zhang-Tomson.yml
    organic/(C5H8O2)n - poly(methyl methacrylate)/Zhang-Mitsubishi.yml
    organic/(C2H6OSi)n - polydimethylsiloxane/Zhang-5-1.yml
    organic/(C2H6OSi)n - polydimethylsiloxane/Zhang-10-1.yml
    organic/(C2H6OSi)n - polydimethylsiloxane/Zhang-15-1.yml
    organic/(C2H6OSi)n - polydimethylsiloxane/Zhang-20-1.yml
    organic/(C2H3Cl)n - polyvinyl chloride/Zhang.yml
    organic/(C37H24O6N2)n - polyetherimide/Zhang.yml
  new data (thanks to Raj Gupta, Volant Technologies, USA, for suggesting data!)
    organic/C7H8 - toluene/Myers.yml
    organic/C8H8 - styrene/Myers.yml
    organic/(C8H8)n - polystyren/Myers.yml
    organic/C6H5NO2 - nitrobenzene/Myers.yml
    organic/C8H18 - octane/Myers.yml
    organic/C3H8O - propanol/Myers.yml